syntax = "proto3";

// Creo que este es el paquete papá de los pollitos.
package org.itson.gestionSensores;

option java_multiple_files = true; // Indica que habrá una clase por mensaje y por servicio. En vez de una para todo.
option java_package = "org.itson.grpc"; // Paquete donde se generarán las clases.
option java_outer_classname = "GestionSensoresProto"; // Nombre de la clase externa por default.

// Importar el tipo Empty para peticiones vacías
import "google/protobuf/empty.proto";

// Servidor
service GestionSensoresServidor {
  rpc GetSensor (SensorPeticion) returns (SensorRespuesta);
  rpc GetTodosSensores (google.protobuf.Empty) returns (SensoresRespuesta);
}

// Mensaje de solicitud
message SensorPeticion {
  SensorLectura sensorLectura = 1;
}

// Este es el objeto Sensor que está arriba
message SensorLectura {
  string idSensor = 1;
  string macAddress = 2;
  string marca = 3;
  string modelo = 4;
  string magnitud = 5;
  string unidad = 6;
  bool estado = 7;
}

// Mensaje de respuesta
message SensorRespuesta {
  string id = 1;
  string idSensor = 2;
  string macAddress = 3;
  string marca = 4;
  string modelo = 5;
  string magnitud = 6;
  string unidad = 7;
  string idInvernadero = 8;
  string nombreInvernadero = 9;
  string sector = 10;
  string fila = 11;
  bool estado = 12;
}

// Lista de sensores
message SensoresRespuesta {
  repeated SensorRespuesta sensores = 1;
}